--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-error-boundaries": "^1.1.4",
+    "react-masonry-css": "^1.0.12",
     "react-preloader-icon": "^0.2.0",
     "react-redux": "^6.0.1",
     "react-router": "^4.4.0",
@@ -34,8 +35,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "react-masonry-css": "^1.0.12"
-  }
+  ]
 }
